<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="100"
    android:background="@drawable/moments720x1080x2"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30dp"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:text="@string/title_color"
        android:textSize="16sp"
        android:gravity="center"/>

    <RadioGroup
        android:id="@+id/radio_group1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/rb_red"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color1"/>
        <RadioButton
            android:id="@+id/rb_yellow"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color2"/>
        <RadioButton
            android:id="@+id/rb_white"
            android:layout_width="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"
            android:text="@string/color3"/>
        </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_price"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:textSize="15sp"
        android:gravity="center"/>
    <RadioGroup
        android:id="@+id/radio_group2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/rb_price1"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price1"/>

        <RadioButton
            android:id="@+id/rb_price2"
            android:layout_marginStart="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price2"/>
        <RadioButton
                android:id="@+id/rb_price3"
                android:layout_marginStart="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price3"/>
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/custom_button"
        android:text="@string/ok"
        android:textColor="@color/colorOlive" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_show"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="20dp"
            android:background="@drawable/custom_button"
            android:text="Show all"
            android:textColor="@color/colorOlive" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="20dp"
            android:background="@drawable/custom_button"
            android:text="Clear file"
            android:textColor="@color/colorOlive" />

    </LinearLayout>

    <TextView
        android:id="@+id/answer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:layout_marginTop="50dp"
        android:text="@string/promise_text" />

</androidx.appcompat.widget.LinearLayoutCompat>